<resources>
    <string name="app_name">Backtrack</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="key_id">1460765774239001</string>
    <string name="skip_facebook">Continue without Facebook</string>
    <string name="date_text">Today\'s Date</string>
    <string name="song_title">Song Title</string>
    <string name="song_artist">Artist</string>
    <string name="facebook_tab">Facebook Activities</string>
    <string name="news_tab">News</string>
    <string name="next_year">Next Year</string>
    <string name="no_facebook_content">Cannot view Facebook content</string>
    <string name="prev_year">Previous Year</string>
    <string name="facebook_sign_in">Sign in with Facebook</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status_msg">New Text</string>
    <string name="no_activity_msg">No Facebook Activities on this date</string>
    <string name="title_activity_facebook_details">FacebookDetailsActivity</string>
    <string name="likes"> %s</string>
    <string name="status">Story</string>
    <string name="comments"> %s</string>
    <string name="title_activity_facebook_second">FacebookSecondActivity</string>
    <string name="status_alternative">Uploaded a photo</string>
    <string name="autoplay_switch_text">Autoplay Music</string>
    <string name="facebook_connection">Connect to Facebook</string>
    <string name="feedback">Feedback</string>
    <string name="song_name">Song Name</string>
    <string name="db_explorer">Database Explorer</string>
    <string name="button_text_play">Play</string>
    <string name="button_text_pause">Pause</string>
    <string name="travel_back">Travel back in time with rock\n music, Facebook and news</string>
    <string name="dont_worry_facebook_login">Don\'t worry!\nWe never post on Facebook\nwithout your permission.</string>
    <string name="facebook_activity">Facebook Activities</string>
    <string name="read_more_nyt">Read more in The New York Times</string>
    <string name="button_text_loading">Loading</string>
    <string name="share_text">Share text</string>
    <string name="share_via">Share via</string>
    <string name="share_url">Share URL</string>
    <string name="text_plain">text/plain</string>
</resources>
