<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:scaleType="fitXY"
            android:background="#85deda"
            android:src="@drawable/city_illustration" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/music_image"
                android:layout_width="@dimen/music_image_width"
                android:layout_height="@dimen/music_image_height" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/handle_v2"/>

            <Button
                android:id="@+id/play_music_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </FrameLayout>




        <TextView
            android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/date_text" />

        <TextView
            android:id="@+id/song_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_title" />

        <TextView
            android:id="@+id/song_artist_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_artist" />

        <RelativeLayout
            android:id="@+id/facebook_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <TextView
                android:id="@+id/no_facebook_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/news_view">

        </RelativeLayout>

        <Button
            android:id="@+id/previous_year_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prev_year" />

    </LinearLayout>
</ScrollView>