<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settings_background">

    <LinearLayout
        android:layout_marginTop="@dimen/settings_top_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="@dimen/settings_side_margin"
        android:paddingStart="@dimen/settings_side_margin"
        android:background="@color/white"
        android:id="@+id/settings_top">

        <Switch
            android:id="@+id/facebook_switch"
            style="@style/settings_style"
            android:textSize="@dimen/settings_text"
            android:textColor="@color/settings_text"
            android:text="@string/facebook_connection"
            android:textAppearance="@style/regular"/>

        <ImageView
            android:layout_width="@dimen/settings_line_width"
            android:layout_height="@dimen/settings_line_height"
            android:layout_gravity="center_horizontal"
            android:background="@color/line_spacer" />

        <Switch
            android:id="@+id/autoplay_switch"
            style="@style/settings_style"
            android:textSize="@dimen/settings_text"
            android:textColor="@color/settings_text"
            android:text="@string/autoplay_switch_text"
            android:textAppearance="@style/regular"/>

        <ImageView
            android:layout_width="@dimen/settings_line_width"
            android:layout_height="@dimen/settings_line_height"
            android:layout_gravity="center_horizontal"
            android:background="@color/line_spacer" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_box_height"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/feedback_setting"
                android:textSize="@dimen/settings_text"
                style="@style/settings_style"
                android:text="@string/feedback"
                android:textColor="@color/settings_text"
                android:layout_marginTop="@dimen/feedback_top_margin"
                android:textAppearance="@style/regular"/>
            
            <ImageView
                android:layout_width="@dimen/feedback_arrow_width"
                android:layout_height="@dimen/feedback_arrow_height"
                android:background="@drawable/feedback_arrow"
                android:layout_marginLeft="@dimen/feedback_left_margin"
                android:layout_marginTop="@dimen/feedback_arrow_top"/>

        </LinearLayout>



    </LinearLayout>

    <ImageView
        android:layout_below="@+id/settings_top"
        android:layout_marginTop="@dimen/plane_top_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:background="@drawable/plane_and_path" />

</RelativeLayout>